<resources>
    <string name="app_name">MisVinos</string>
    <string name="no_hay_grupos">No Hay Grupos</string>
    <string name="action_settings">Opciones</string>
    <string name="menu_insert">Añadir Vino</string>
    <string name="menu_delete">Borrar Vino</string>
    <string name="menu_edit">Editar Vino</string>
    <string name="nomVino">Nombre:</string>
    <string name="nomGrupo">Nombre:</string>
    <string name="valorParametro">Parámetro:</string>
    <string name="valorBusqueda1">Valor del campo minimo:</string>
    <string name="valorBusqueda2">Valor del campo maximo:</string>
    <string name="vino">Tipo de vino:</string>
    <string name="confirmar">Confirmar</string>
    <string name="editar_vino">Editar Vino</string>
    <string name="title_activity_editar_vino">Editar Vino</string>
    <string name="uva">Tipo de uva:</string>
    <string name="denominacion">Denominacion:</string>
    <string name="anno">Año:</string>
    <string name="premios">Premios:</string>
    <string name="grupo">Grupo:</string>
    <string name="valoracion">Valoracion personal:</string>
    <string name="localizacion">Posicion:</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="Campo">Campo</string>
    <string name="numVinos">Numero total de vinos en la base de datos:</string>

    <string name="title_activity_mis_vinos">MisVinos</string>
    <string name="title_activity_mis_grupos">MisGrupos</string>
    <string name="title_activity_editar_grupo">EditarGrupo</string>
</resources>
