<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarVino">
    <ScrollView
        android:id="@+id/SView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">


            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:text="@string/nomVino" />
                <EditText android:id="@+id/nomVino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Nombre del vino"
                    android:inputType="text"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/vino" />
                <EditText android:id="@+id/vino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Tipo del vino"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/uva" />
                <EditText android:id="@+id/uva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Ejemplo: UVA1-5.0,UVA2-10.0"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/denominacion" />
                <EditText android:id="@+id/denominacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Denominacion del vino"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/anno" />
                <EditText android:id="@+id/anno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Año del vino"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/localizacion" />
                <EditText android:id="@+id/localizacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Posicion del vino"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/premios" />
                <EditText android:id="@+id/premios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Ejemplo: P1-1999,P2-2000"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="Grupo:" />
                <EditText android:id="@+id/grupos"
                    android:hint="Ningun grupo asignado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button android:id="@+id/añadir_grupo"
                    android:text="Añadir Grupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button android:id="@+id/quitar_grupo"
                    android:text="Quitar Grupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="@string/valoracion" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:rating="0" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#a80038"
                    android:layout_margin="5dp"
                    android:text="Notas:" />
                <EditText android:id="@+id/notas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Anotaciones sobre el vino"
                    android:inputType="text"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button android:id="@+id/confirmar"
                android:text="@string/confirmar"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
